@@ -1,4 +1,5 @@
 1.1.0
+ * Accept partition key predicates in CassandraRDD#where. (#37)
  * Allow multiple comma-separated hosts in spark.cassandra.connection.host
  * Add indexedColumn to ColumnDef (#122)
 
